# hilfe-python-package

./: README.md  pyproject.toml
hilfe/: cli.py  data.json
